Bug fix show course-preview tags scrollbar on desktop

--- a/core51/wisyki/css/scout.css
+++ b/core51/wisyki/css/scout.css
@@ -1947,7 +1947,7 @@ details[open]>summary::after {
     }
 
     .course-preview__skills ul {
-
+        scrollbar-width: unset;
         /* Style scrollbar */
         &::-webkit-scrollbar {
             height: 4px;
